--- a/legal-vision/www/css/style.css
+++ b/legal-vision/www/css/style.css
@@ -1,1 +1,9 @@
 /* Empty. Add your own CSS if you like */
+.text-center {
+    text-align: center;
+}
+
+.picture {
+  max-width: 100%;
+  max-height: 100%;
+}
