--- a/legal-vision/www/templates/home.html
+++ b/legal-vision/www/templates/home.html
@@ -5,7 +5,12 @@
 
 	<ion-content class="has-header padding">
 		<img src="{{ home_ctrl.current_image }}" class="picture">
-		<h3 class="text-center" ng-show="home_ctrl.image_description">{{home_ctrl.image_description}}</h3>
+		<div ng-repeat = "home_ctrl in home_ctrl_array">
+			<h3 class="text-center" ng-show="home_ctrl.word"><u>Legal Word:</u>{{home_ctrl.word}}</h3>
+			<h3 class="text-center" ng-show="home_ctrl.definition"><u>Explanation:</u>{{home_ctrl.definition}}</h3>
+			<h3 class="text-center" ng-show="home_ctrl.usage"><u>Usage:</u>{{home_ctrl.usage}}</h3>
+			<h3 class="text-center" ng-show="home_ctrl.sign"><u>Sign:</u>{{home_ctrl.sign}}></h3>
+		</div>
         <button class="button button-positive button-block" ng-click="takePicture()">
         Read Document
         </button>
